--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,28 +27,12 @@ jobs:
     - name: build wiki 
       run: yarn run build
 
-    - name: Upload Build Artifact
-      uses: actions/upload-pages-artifact@v3
+    - name: upload to cloudflare r2
+    - uses: ryand56/r2-upload-action@latest
       with:
-        path: build
-  
-  deploy:
-    name: Deploy to GitHub Pages
-    needs: build
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write # to deploy to Pages
-      id-token: write # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-        
+        r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+        r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+        r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+        r2-bucket: ${{ secrets.R2_BUCKET }}
+        source-dir: build
+        destination-dir: ./
